Back to it after a while - fixed project code along sheets + improved next app for face recognition request

--- a/index.html
+++ b/index.html
@@ -980,15 +980,26 @@
 								</li>
 							</ul>
 
+							<li class="li-root">Different implementation examples</li>
+							<ul>
+								<li><a href="">Robot Friends (v18 & CRA)</a></li>
+								<li><a href="">Robot Friends (v19+ & Vite)</a></li>
+								<li><a href="">Robot Friends (React Hooks)</a></li>
+							</ul>
+							<br>
+
+
 							<li class="li-root">Deployment</li>
 							<ul>
-								<a
-									href="https://create-react-app.dev/docs/deployment/#github-pages-https-pagesgithubcom"
-									target="_blank"
-									>Github Page Deployment
-								</a>
-								<br>
+								<li>
+									<a
+										href="https://create-react-app.dev/docs/deployment/#github-pages-https-pagesgithubcom"
+										target="_blank"
+										>Github Page Deployment
+									</a>
+								</li>
 							</ul>
+							<br>
 						</ul>
 					</ul>
 				</section>
@@ -1004,7 +1015,7 @@
 						<ul>
 							<li>
 								<a
-								href="/09_final-project_smart-brain/resources/26_resource_asynchonous_promise.zip"
+								href="/08_asynchronous/resources/26_resource_asynchonous_promise.zip"
 								alt="Files Resources to practice asynchronous with promises"
 								target="_blank"
 								download>
@@ -1013,7 +1024,7 @@
 						</li>
 						<li>
 							<a
-								href="/09_final-project_smart-brain/resources/27_resource_asyncAwait.zip"
+								href="/08_asynchronous/resources/27_resource_asyncAwait.zip"
 								alt="Files Resources to practice asynchronous with async await"
 								target="_blank"
 								download>
@@ -1022,7 +1033,7 @@
 						</li>
 						<li>
 							<a
-								href="/09_final-project_smart-brain/resources/28_resource_ES9.zip"
+								href="/08_asynchronous/resources/28_resource_ES9.zip"
 								alt="Files listing ES9 features and examples"
 								target="_blank"
 								download>
@@ -1039,49 +1050,61 @@
 								<a href="https://github.com/daumann/ECMAScript-new-features-list" target="_blank" rel="noopener noreferrer">
 									ECMAScript new features list
 								</a>
-								<a href="https://publicapis.dev/" target="_blank" rel="noopener noreferrer">
-									Public APIs
-								</a>
-								<a href="https://www.ibm.com/watson" target="_blank" rel="noopener noreferrer">
-									(Free trial) IBM Watson use for a speech api challenge
-								</a>
-								<a href="https://play.elevatorsaga.com/" target="_blank" rel="noopener noreferrer">
-									Learn to be familia with documentation with this elevator game
-								</a>
-
 							</li>
+
 						</ul>
 					</ul>
 				</section>
-
+				
+				
 				<!-- ----------------------------------------------------------------------- -->
-				<!--                              MISCELLANEOUS                              -->
+				<!--                              PROJECT SMART BRAIN                               -->
 				<!-- ----------------------------------------------------------------------- -->
 				<section class="card">
-					<h1>MISCELLANEOUS</h1>
+					<h1>PROJECT SMART BRAIN</h1>
 					<ul>
-						<li class="li-root">Leveling Up: The Power of Problem Solving</li>
+						<li class="li-root">File Resources</li>
 						<ul>
-							<li>
-								<a href="https://nautil.us/not-all-practice-makes-perfect-235890/" target="_blank" rel="noopener noreferrer">
-									Article - Not all practice makes perfect
+							<!-- <li>
+								<a
+									href="/08_asynchronous/resources/26_resource_asynchonous_promise.zip"
+									alt="Files Resources to practice asynchronous with promises"
+									target="_blank"
+									download>
+									Resource to practice asynchronous with promises
 								</a>
 							</li>
 							<li>
-								<a href="https://www.tofugu.com/japan/kendo/" target="_blank" rel="noopener noreferrer">
-									TOGUFU: Kendo
+								<a
+									href="/08_asynchronous/resources/27_resource_asyncAwait.zip"
+									alt="Files Resources to practice asynchronous with async await"
+									target="_blank"
+									download>
+									Resources to practice asynchronous with async await
 								</a>
 							</li>
 							<li>
-								<a href="https://www.ibm.com/watson" target="_blank" rel="noopener noreferrer">
-									(Free trial) IBM Watson use for a speech api challenge
+								<a
+									href="/08_asynchronous/resources/28_resource_ES9.zip"
+									alt="Files listing ES9 features and examples"
+									target="_blank"
+									download>
+									Files listing ES9 features and examples
 								</a>
-							</li>
-							<li>
-								<a href="https://play.elevatorsaga.com/" target="_blank" rel="noopener noreferrer">
-									Learn to be familia with documentation with this elevator game
-								</a>
-							</li>
+								<br>
+								<br>
+							</li> -->
+						</ul>
+
+						<li class="li-root">Resources links</li>
+						<ul>
+							<li><a href="https://www.clarifai.com/">Clarifai</a></li>
+							<li><a href="https://docs.clarifai.com/api-guide/predict/images">Clarifai API Documentation</a></li>
+							<li><a href="https://clarifai.com/explore">Clarifai Explorer</a></li>
+							<li><a href="https://clarifai.com/clarifai/main/models/general-image-recognition">General Image Recognition</a></li>
+							<li><a href="https://clarifai.com/clarifai/main/models/face-detection">Face Detection</a></li>
+							<li><a href="https://clarifai.com/clarifai/main/models/color-recognition">Color Recognition</a></li>
+							<li><a href="https://github.com/Clarifai/clarifai-javascript#basic-use">Clarifai JavaScript Basic Use</a></li>
 						</ul>
 					</ul>
 				</section>
