Face Recognitions - creates multiple canvas per received cordinates --> could be improved

--- a/09_final-project_smart-brain/shared/footer-content.html
+++ b/09_final-project_smart-brain/shared/footer-content.html
@@ -11,6 +11,8 @@
 	</head>
 	<body>
 		<div class="footer-content_container flex">
+		<plop>
+		</plop>
 			<a id="back-to-top" href="#layout_page" target="_top"></a>
 		</div>
 	</body>
